[metadata]
# replace with your username:
name = iregulscrapper
version = 0.0.1
author = PoppyPop
author_email = author@example.com
description = IRegul data scrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PoppyPop/IRegulScrapper
project_urls =
    Bug Tracker = https://github.com/PoppyPop/IRegulScrapper/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Home Automation

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
all = BeautifulSoup4; aiohttp
test = FastAPI; uvicorn; pytest-asyncio; pytest-xdist